# microweldr

./: .bumpversion.toml  .coverage  .flake8  .gitignore  .pre-commit-config.yaml  ANIMATION_IMPROVEMENTS.md  CHANGELOG.md  DEVELOPMENT.md  MAINTAINER.md  Makefile  PRINTER_CONNECTION.md  README.md  SECURITY.md  SKIP_ALGORITHM.md  TEST_COVERAGE_PLAN.md  TEST_FIXES_SUMMARY.md  UI_README.md  config.toml  experimental_validation.md  flask-weld-r5.dxf  flask-weld.dxf  generate_dxf_animation.py  good_dxf_circle_square_line_arc_ignore_construction.dxf  microweldr_config.toml  microweldr_config.toml.template  microweldr_secrets.toml  microweldr_secrets.toml.template  newCmdOptions  pyproject.toml  pytest.ini  requirements.txt  secrets.toml.template  svg_to_gcode_welder.py  test_enhanced_system.py  test_output  test_output_enhanced.json  test_prusalink.py  test_ui_keys.py  track_print.py
.cache/: svg_parse_27a61ce72c12b54f.cache  svg_parse_c54878d9bec75b0c.cache
.github/: DEPLOYMENT_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  ci.yml  codeql.yml  pypi_publish.yml  release.yml  test.yml  tests.yml  version-bump.yml  version_bump.yml
.hypothesis/constants/: 0faf11970a14c18e  1309b99f185850ef  136ca618b27f092e  14ecbc5c4522a942  28f303b939591b5b  29ab5831a71b3784  2e7598dfe363a59e  3610bc6110925b86  4e7ec5011a629f9d  4f23b246687b8e4b  61192fa3656dcb99  7f8fdb416ed39d66  a97102af5b60af1f  ab65da30b8661f41  abf7ebcd57f412c7  b32d771fa48e3b4f  bc632a97ce18b14f  bef1e9c59b81be35  c6b260ef547cc678  c8f35e010ed8514e  cedb105250e46397  d7631c97972844ca  d768c2bf1aa23134  da8717bcdf9b3094  db9665e8cfbe9b24  dd5c3cbab2743a9d  ee3771f24dc030cd  fe94d412cf2c5427
.windsurf/: rules.md
docs/: DRY_improvements.md  badges_guide.md  coordinate_centering.md  temperature_control.md  version_bumping.md
examples/: README.md  REGENERATION_SUMMARY.md  calibration_test_new.html  combined.gcode  combined_frangible.dxf  combined_normal.dxf  comprehensive_sample_new.html  config.toml  example.html  example_new.html  flask-weld-c2mm-r10mm.dxf  flask_component.html  flask_component_fixed.html  flask_simple.html  frangible.dxf  library_usage_examples.py  microweldr_config.toml  pause_examples.html  pause_examples_new.html  pipetting_example.html  pipetting_example_new.html  square-circle-separate-sides_new.html  square-circle.html  weld.dxf
examples/animations/: README.md
gcode/: heat_160.gcode  heat_170.gcode  level-bed.gcode  reset-axis.gcode  weld-dots.gcode
microweldr/: __init__.py  __main__.py
microweldr/animation/: generator.py
microweldr/api/: __init__.py  core.py  monitoring.py  printer.py  validation.py  workflow.py
microweldr/cli/: config_setup.py  enhanced_main.py  enhanced_weld_command.py  main.py  monitor_print.py  printer_control.py  printer_status.py  prusa_usb_terminal.py  prusalink_test.py  simple_main.py  stop_print.py  temperature_control.py  ui_main.py  workflow.py
microweldr/core/: app_constants.py  bounding_box_subscriber.py  caching.py  config.py  constants.py  converter.py  coordinate_centering.py  data_models.py  data_models_old.py  dxf_reader.py  enhanced_converter.py  enhanced_svg_parser.py  enhanced_writers.py  error_handling.py  event_processor.py  events.py  file_factory.py  file_readers.py  frame_extent_calculator.py  gcode_generator.py  generator_factory.py  graceful_degradation.py  health_checks.py  interactive_config.py  logging_config.py  models.py  multipass_point_iterator.py  point_iterator.py  printer_operations.py  printer_service.py  processing_events.py  progress.py  resource_management.py  safety.py  secrets_config.py  security.py  simple_gcode_generator.py  streaming_animation_subscriber.py  streaming_gcode_subscriber.py  subscriber_factory.py  (+7 more)
microweldr/generators/: __init__.py  deduplicating_point_iterator.py  dxf_point_iterator.py  models.py  multipass_point_iterator.py  point_iterator.py  point_iterator_factory.py  svg_point_iterator.py
microweldr/monitoring/: __init__.py  monitor.py
microweldr/outputs/: __init__.py  bambu_3mf_subscriber.py  gif_animation_subscriber.py  png_animation_subscriber.py  streaming_animation_subscriber.py  streaming_gcode_subscriber.py  weld_renderer.py
microweldr/parsers/: __init__.py  dxf_reader.py  enhanced_readers.py  enhanced_svg_parser.py  file_readers.py  svg_parser.py  svg_reader.py
microweldr/processors/: __init__.py  event_processor.py  outline_subscriber.py  subscriber_factory.py  subscribers.py  two_pass_processor.py  two_phase_processor.py
microweldr/prusalink/: __init__.py  client.py  exceptions.py
microweldr/ui/: __init__.py  curses_ui.py
microweldr/validation/: validators.py
scripts/: bump_version.py  prusa_usb_terminal.py  setup_pypi.py  test-before-commit.sh  test_printer.py
svg_welder/: __init__.py
svg_welder/animation/: __init__.py  generator.py
svg_welder/cli/: __init__.py  main.py  monitor_print.py  printer_control.py  printer_status.py  prusalink_test.py  stop_print.py
svg_welder/core/: __init__.py  config.py  converter.py  gcode_generator.py  models.py  svg_parser.py
svg_welder/monitoring/: __init__.py  monitor.py
svg_welder/prusalink/: __init__.py  client.py  exceptions.py
svg_welder/validation/: __init__.py  validators.py
tests/: __init__.py  test_api_core.py  test_conversion_permutations.py  test_core_converter.py  test_gcode_generator.py  test_integration_full_pipeline.py  test_linting.py  test_streaming_gcode.py
tests/fixtures/: test_config.toml
tests/integration/: README.md  __init__.py  test_comprehensive_workflow.py  test_full_workflow.py  test_printer_integration.py
tests/outputs/: test_animation_generation.py  test_bambu_3mf.py  test_gif_animation.py  test_weld_heights.py
tests/parsing/: test_bezier_curves.py  test_dxf_construction_lines.py  test_dxf_line_segments.py  test_dxf_parsing.py  test_svg_parsing.py
tests/property/: test_property_based.py
tests/unit/: __init__.py  test_animation_generator.py  test_animation_generator_advanced.py  test_config.py  (+22 more)
(+81 files in other folders)
