[project]
name = "microweldr"
version = "6.1.4"
description = "Convert SVG and DXF files to Prusa Core One G-code for plastic welding"
authors = [
    {name = "Reto Stamm", email = "reto@retostamm.com"}
]
readme = "README.md"
license = "MIT"
keywords = ["3d-printing", "welding", "gcode", "svg", "dxf", "prusa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "ezdxf>=1.4.0",
    "lxml>=5.0.0",
    "toml>=0.10.2",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/retospect/microweldr"
Repository = "https://github.com/retospect/microweldr"
Documentation = "https://github.com/retospect/microweldr"

[project.scripts]
microweldr = "microweldr.__main__:main"

[tool.poetry]
name = "microweldr"
version = "6.1.4"
description = "Convert SVG and DXF files to Prusa Core One G-code for plastic welding"
authors = ["Reto Stamm <reto@retostamm.com>"]
packages = [{include = "microweldr"}]

[tool.poetry.scripts]
microweldr = "microweldr.__main__:main"

[tool.poetry.dependencies]
python = ">=3.10"
Pillow = ">=10.0.0"
ezdxf = ">=1.4.0"
lxml = ">=5.0.0"
toml = ">=0.10.2"
requests = ">=2.25.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^5.0.0"
black = ">=24,<26"
flake8 = "^7.0.0"
mypy = "^1.8.0"
bandit = "^1.8.0"
pre-commit = "^4.4.0"
coverage = "^7.4.0"
requests-mock = "^1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: marks tests that require hardware connection",
]

[tool.coverage.run]
source = ["microweldr"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ezdxf.*",
    "lxml.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]
